<resources>
    <string name="app_name">FitFirst</string>

    <string name="text_feature01">Feature 01: Home</string>
    <string name="text_feature02">Feature 02: Workout Plan</string>
    <string name="text_feature03">Feature 03: Nutrition Plan</string>
    <string name="text_feature04">Feature 04: Progress</string>

    <!--  Dialog  -->
    <string name="token_unknown">Unable to find your session</string>
    <string name="login_again">Please login again</string>
    <string name="one_more">One more step!</string>
    <string name="one_more_desc">To start using this app, please complete your data and set up your goals.</string>

    <!--  Food type  -->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>

    <!--  Auth Page  -->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_desc">Empowering you to live healthier, everyday</string>
    <string name="login_desc">Glad to see you again.</string>
    <string name="signup_desc">Create an account to continue.</string>

    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Log out</string>
    <string name="hello">Hello!</string>
    <string name="welcome_back">Welcome back!</string>

    <string name="email_error">Make sure you fill in the correct email.</string>
    <string name="password_error">Password can\'t be less than 8 characters.</string>
    <string name="unknown_error">Unknown error.</string>

    <string name="regis_failed">Registration failed!</string>
    <string name="regis_success">Account %1$s has been created.</string>
    <string name="login_success">Login successful!</string>

    <string name="success">Success!</string>
    <string name="error">Error!</string>
    <string name="ok">OK</string>

    <string name="_e"></string>

    <!--  Profile Page  -->
    <string name="profile">User Profile</string>
    <string name="set_goals">User Goals</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="weight_t">Weight you want to lose or gain (kg)</string>
    <string name="duration">Duration to achieve your target (days)</string>
    <string name="track_weight">Track Weight</string>
    <string name="save">Save</string>
    <string name="warning">Warning!</string>
    <string name="edit_success">Your profile is successfully updated!</string>
    <string name="goal2">Goal</string>
    <string name="act_level2">Activity level</string>

    <!--  Predict Page  -->
    <string name="predict_info">Please select an image, your image will be shown above. Then, please click Predict Button below to get your result.</string>
    <string name="not_recognized">Your image is not recognized as a food, please try again with another image.</string>
    <string name="related_result">Related results:</string>

    <!--  Add Food Page  -->
    <string name="add_food_title">Track your food</string>
    <string name="food_name">Food name</string>
    <string name="quantity">Quantity (grams)</string>
    <string name="mealtime">Mealtime</string>

    <!--  Feature 01  -->
    <string name="name">Name</string>
    <string name="userinfo">78 kg | 180 cm | BMI: 24.1</string>
    <string name="needs">Needs:</string>
    <string name="needs_value">3500 cal</string>
    <string name="consumed">Consumed:</string>
    <string name="consumed_value">2750 cal</string>
    <string name="title_workout">Plan a workout!</string>
    <string name="desc_workout">Get active and stay healthy!</string>
    <string name="button_workout">Start working out</string>
    <string name="button_trackfood">Track your food!</string>
    <string name="settings">Settings</string>
    <string name="goal">Goal:</string>
    <string name="goal_value">maintain weight</string>
    <string name="act_level">Activity level:</string>
    <string name="act_value">sedentary</string>
    <string name="premium">Premium</string>

    <!--  Feature 02  -->
    <string name="create_workout">Create Workouts</string>
    <string name="choose_workout">Choose your workouts</string>
    <string name="start">Start</string>

    <!--  Feature 03  -->
    <string name="chart_title">Today\'s calorie</string>
    <string name="target_title">Current target</string>
    <string name="info_title">Here are some food informations!</string>
    <string name="daily_w">Daily workouts</string>
    <string name="all_w">All workout plans</string>
    <string name="workout_schedule">Workout Schedule</string>

    <!--  Feature 04  -->
    <string name="weight_graph">Your weight history</string>
    <string name="insert_update">Track your weight</string>
    <string name="date">Date:</string>

</resources>